# SimpleWeb

./: CMakeLists.txt  main.cpp
src/: swlib.cpp  swlib.h
src/networking/: swConnecting_Socket.cpp  swConnecting_Socket.h  swSocket.cpp  swSocket.h  swSocket_Binder.cpp  swSocket_Binder.h  swlib_networking.h
src/networking/server/: swServer.cpp  swServer.h  swServers.h
src/networking/server/exs/: swServer_test.cpp  swServer_test.h
src/networking/sockets/: swConnecting_Socket.cpp  swConnecting_Socket.h  swListening_Socket.cpp  swListening_Socket.h  swSocket.cpp  swSocket.h  swSocket_Binder.cpp  swSocket_Binder.h  swlib_sockets.h
